--- a/spring-cloud-gateway/src/main/resources/application.yml
+++ b/spring-cloud-gateway/src/main/resources/application.yml
@@ -4,28 +4,13 @@ server:
 spring:
   cloud:
     gateway:
-      httpclient:
-        ssl:
-          # Gateway HTTPClient configuration for SSL communication
-          key-store: classpath:client-kms.p12
-          key-store-password: svn4ever
-          key-store-type: PKCS12
-          useInsecureTrustManager: true   # For self-signed certificates, should be false or removed in production environment
-          # TLS Handshake configuration
-          handshake-timeout-millis: 10000
-          close-notify-flush-timeout-millis: 3000
-          close-notify-read-timeout-millis: 0
       default-filters:
-      - name: GlobalFilter
+        - name: GlobalFilter
       routes:
-        - id: service-one
-          uri: https://localhost:9091/
+        - id: service
+          uri: http://localhost:9091/
           predicates:
-            - Path=/service-one/**
+            - Path=/service/**
           filters:
-          - name: PreFilter
-          - name: PostFilter
-        - id: service-two
-          uri: http://localhost:9092/
-          predicates:
-            - Path=/service-two/**
+            - name: PreFilter
+            - name: PostFilter
